removed old \bf command

--- a/manuscript/HIVreconst.tex
+++ b/manuscript/HIVreconst.tex
@@ -84,7 +84,7 @@ Structure for the abstract:
 
 \end{abstract}
 
-{\bf Keywords}: HIV-1 transmission, phylogenetics, transmission chain reconstruction, within-host evolution, \ldots
+\textbf{Keywords}: HIV-1 transmission, phylogenetics, transmission chain reconstruction, within-host evolution, \ldots
 
 
 \section{Introduction}
