some structure for introduction

--- a/manuscript/HIVreconst.tex
+++ b/manuscript/HIVreconst.tex
@@ -102,6 +102,15 @@ Structure for the abstract:
 \end{itemize}
 
 
+% General Introduction
+% transmission chain reconstruction important:
+	% to learn about structure in transmission chains (super-spreaders)
+	% because phylogenetic methods used in court, need to be reliable
+% Use of virus phylogeny as an approximation for transmission chains
+% underlying idea: as virus constantly mutates, more distant viral strains are less likely to be sampled from a transmitter-infected pair
+
+% Overview: what has been researched on?
+% 
 
 
 
