--- a/manuscript/HIVreconst.tex
+++ b/manuscript/HIVreconst.tex
@@ -18,10 +18,10 @@
 \usepackage[noblocks]{authblk}
 \usepackage{pifont}
 \usepackage{amsmath}
-\usepackage{latexsym}                   % BeweiskŠstchen
+\usepackage{latexsym}                   % Beweiskï¿½stchen
 
 \newcommand{\ind}{\mathds{1}} %Indikatorfunktion
-\newcommand{\qed}{\hfill $\Box$ \par} % Beweisende: Kästchen
+\newcommand{\qed}{\hfill $\Box$ \par} % Beweisende: Kï¿½stchen
 \newcommand{\figsvpn}{/Users/magnus/Desktop/virpopneutra/figs_paper}
 \newcommand{\dd}{\mathrm{d}}% differential d
 
@@ -46,11 +46,11 @@
 
 
 %%%%%%%%%% TITLE %%%%%%%%%%%%%%
-\title{The influence of viral within-host evolution on transmission chain reconstruction: a simulation study.} 
+\title{The influence of viral within-host evolution on transmission chain reconstruction: a simulation study.}
 
 \author[1,2,3]{Francesco Bosia}
 %\author[1,2]{Tanja Stadler}
-\author[1,2,$\ast$]{Carsten Magnus} 
+\author[1,2,$\ast$]{Carsten Magnus}
 
 \affil[1]{Computational Evolution, Department of Biosystems Science and Engineering, ETH Zurich, Mattenstrasse 26, 4058 Basel, Switzerland}
 \affil[2]{Swiss Institute of Bioinformatics (SIB), Switzerland}
@@ -98,7 +98,7 @@ Structure for the abstract:
 		\item Can transmission chains be reconstructed when sampling times do not match the order of transmission events?
 		\item Which effect do high within-host mutation rates have on the reliability of transmission chain reconstruction?
 		\item Are these two effects dependent on which strains are transmitted (early - i.e. including latent compartment -, or random - i.e. every strain could be transmitted according to their frequencies?
-	\end{enumerate} 	
+	\end{enumerate}
 \end{itemize}
 
 
@@ -110,9 +110,9 @@ Structure for the abstract:
 % underlying idea: as virus constantly mutates, more distant viral strains are less likely to be sampled from a transmitter-infected pair
 
 % Overview: what has been researched on?
-% 
+%
 
-
+%
 
 \section{Materials and Methods}
 
